--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "moment": "^2.30.1",
     "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
